# minitorch

./: LICENSE  README.md  pyproject.toml
src/minitorch/: __init__.py  tensor.py  utils.py
src/minitorch/nn/: __init__.py  linear.py  module.py  parameter.py
src/minitorch/optim/: __init__.py  adamw.py
tests/: test_tensor.py
